[tool.poetry]
name = "pwdsafe"
version = "0.1.0"
description = "Python package to check if a given password is safe to use."
authors = ["Arun Nalla <hello@arunnalla.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
